Upgrade to Matchbox 4.0.0